--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/cli": "^11.3.9",
+    "@react-native-community/cli-platform-ios": "^11.3.9",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
@@ -28,6 +30,8 @@
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
+    "metro": "^0.76.8",
+    "metro-cache-key": "^0.76.8",
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
@@ -35,6 +39,10 @@
   },
   "engines": {
     "node": ">=16"
+  },
+  "resolutions": {
+    "metro": "^0.76.8",
+    "metro-cache-key": "^0.76.8"
   }
 }
 
