--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/geolocation": "^3.3.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "@react-native-community/geolocation": "^3.3.2",
-    "react-native-permissions": "^3.10.1",
-    "@react-native-async-storage/async-storage": "^1.19.3"
+    "react-native-permissions": "^3.10.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -33,6 +34,8 @@
     "metro": "^0.76.8",
     "metro-cache-key": "^0.76.8",
     "metro-react-native-babel-preset": "0.76.8",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
@@ -45,4 +48,3 @@
     "metro-cache-key": "^0.76.8"
   }
 }
-
