--- a/ios/.xcode.env
+++ b/ios/.xcode.env
@@ -8,4 +8,9 @@
 # Customize the NODE_BINARY variable here.
 # For example, to use nvm with brew, add the following line
 # . "$(brew --prefix nvm)/nvm.sh" --no-use
+
+# Use nvm to find node
+if [ -s "$HOME/.nvm/nvm.sh" ]; then
+  . "$HOME/.nvm/nvm.sh"
+fi
 export NODE_BINARY=$(command -v node)
