--- a/android/build.gradle
+++ b/android/build.gradle
@@ -15,7 +15,20 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle")
+        classpath("com.android.tools.build:gradle:8.0.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
+    }
+}
+
+// Enable BuildConfig for all subprojects (required for AGP 8.0+)
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty("android")) {
+            android {
+                buildFeatures {
+                    buildConfig = true
+                }
+            }
+        }
     }
 }
