Convert entire codebase to TypeScript
- Create tsconfig.json with React Native TypeScript configuration
- Convert all models to TypeScript (.ts):
  - Player.ts with PlayerData, PlayerStats interfaces
  - Creature.ts with Rarity types and CreatureTemplate interface
  - Encounter.ts with Location and EncounterStatus types
- Convert all services to TypeScript (.ts):
  - LocationService.ts with LocationData, DistanceData interfaces
  - EncounterService.ts with EncounterConfig, EncounterStatus interfaces
- Convert all components to TypeScript (.tsx):
  - DistanceDisplay.tsx
  - PlayerStats.tsx
  - EncounterModal.tsx
- Convert all screens to TypeScript (.tsx):
  - HomeScreen.tsx
- Convert utils and constants to TypeScript:
  - storage.ts with AppSettings interface
  - config.ts with proper type exports
- Convert entry files:
  - App.js -> App.tsx
  - index.js -> index.ts
- Update package.json main entry point
- Remove all old .js source files
- Add proper type definitions throughout codebase
- Fix Android build configuration:
  - Set Java 17 path in gradle.properties (required for RN 0.72.6)
  - Create local.properties with Android SDK path
- Add Android PATH setup documentation

All TypeScript files compile with no errors.
Android build successful and tested.
iOS build should work (same codebase).

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "walking-rpg-app",
   "version": "1.0.0",
   "description": "Location-based RPG app with random creature encounters while walking",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "start": "react-native start",
     "android": "react-native run-android",
