--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,6 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# Java 17 path (required for React Native 0.72.6 and AGP 8.0.1)
+org.gradle.java.home=/opt/homebrew/Cellar/openjdk@17/17.0.17/libexec/openjdk.jdk/Contents/Home
