--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -43,5 +43,9 @@ newArchEnabled=false
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# Java 17 path (required for React Native 0.72.6 and AGP 8.0.1)
-org.gradle.java.home=/opt/homebrew/Cellar/openjdk@17/17.0.17/libexec/openjdk.jdk/Contents/Home
+# Java 17 is required for React Native 0.72.6 and AGP 8.0.1
+# Configure Java 17 using one of these methods:
+# 1. Set JAVA_HOME environment variable (recommended)
+# 2. Add org.gradle.java.home=<path> to ~/.gradle/gradle.properties (user-level)
+# 3. Add org.gradle.java.home=<path> below (project-level, not recommended for version control)
+# org.gradle.java.home=/path/to/java17
