Add continue-on-error to auto-assign PR workflow
- Prevents workflow from blocking PR merges if assignment fails
- Makes the check non-blocking for pull requests

--- a/.github/workflows/auto-assign-pr.yml
+++ b/.github/workflows/auto-assign-pr.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Assign PR creator
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           script: |
             await github.rest.issues.addAssignees({
