--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.19.3",
-    "@react-native-community/geolocation": "^3.3.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-permissions": "^3.10.1"
