--- a/ios/WalkingRPGTemp/Info.plist
+++ b/ios/WalkingRPGTemp/Info.plist
@@ -36,7 +36,11 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Walking RPG needs your location to track your movement and trigger creature encounters while you walk.</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Walking RPG needs your location to track your movement and trigger creature encounters even when the app is in the background.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Walking RPG needs your location to track your movement and trigger creature encounters even when the app is in the background.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -51,5 +55,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+		<string>fetch</string>
+	</array>
 </dict>
 </plist>
