--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.19.3",
-    "react-native-geolocation-service": "^5.3.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-permissions": "^3.10.1"
   },
   "devDependencies": {
