--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -32,5 +33,12 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+      
+      <!-- Override notifee's ForegroundService to fix invalid foregroundServiceType attribute -->
+      <service
+        android:name="app.notifee.core.ForegroundService"
+        android:exported="false"
+        tools:node="merge"
+        tools:remove="android:foregroundServiceType" />
     </application>
 </manifest>
