Remove Firebase config files from version control
- Add Firebase config files to .gitignore
- Remove google-services.json and GoogleService-Info.plist from git tracking
- Files remain on disk for local development but are no longer tracked

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,10 @@ fastlane/test_output
 .env
 .env.local
 
+# Firebase/Google Services (contains API keys)
+android/app/google-services.json
+ios/GoogleService-Info.plist
+
 # Debug
 .vscode/
 .idea/
