Add Google services configuration files for Android and iOS (#33)
* Add Google services configuration files for Android and iOS

* Fix: Use unique bundle identifier for test target

Changed WalkingRPGTempTests PRODUCT_BUNDLE_IDENTIFIER from
com.walkingrpgtemp to com.walkingrpgtemp.test to avoid code
signing conflicts between the app and test bundle.

* fix: remove Firebase build phases without Firebase dependencies

Remove [CP-User] [RNFB] Core Configuration and Crashlytics Configuration build phases that were added without corresponding @react-native-firebase packages or Firebase pods. These build phases would cause iOS builds to fail with 'No such file or directory' errors since the FirebaseCrashlytics/run script doesn't exist.

* Remove Firebase config files from version control

- Add Firebase config files to .gitignore
- Remove google-services.json and GoogleService-Info.plist from git tracking
- Files remain on disk for local development but are no longer tracked

--- a/.gitignore
+++ b/.gitignore
@@ -58,10 +58,13 @@ fastlane/test_output
 .env
 .env.local
 
+# Firebase/Google Services (contains API keys)
+android/app/google-services.json
+ios/GoogleService-Info.plist
+
 # Debug
 .vscode/
 .idea/
 
 # Personal documentation (not for other developers)
 docs/personal/
-
