--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,6 +44,7 @@ end
 
 target 'WalkingRPGTemp' do
   config = use_native_modules!
+  use_modular_headers!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
