--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,6 +18,8 @@ buildscript {
         classpath("com.android.tools.build:gradle:8.0.1")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("com.google.gms:google-services:4.4.0")
+        // Firebase Crashlytics Gradle plugin - required to generate build IDs
+        classpath("com.google.firebase:firebase-crashlytics-gradle:2.9.9")
     }
 }
 
