--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-native-firebase/app": "^18.0.0",
+    "@react-native-firebase/crashlytics": "^18.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-geolocation-service": "^5.3.1",
