--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "test": "jest",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "firebase": "firebase"
   },
   "dependencies": {
     "@notifee/react-native": "^9.1.8",
@@ -33,6 +34,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "firebase-tools": "^13.35.1",
     "jest": "^29.2.1",
     "metro": "^0.76.8",
     "metro-cache-key": "^0.76.8",
