Add Firebase App Distribution plugin configuration
- Add @react-native-firebase/app-distribution@^18.0.0 to dependencies
- Add Firebase App Distribution Gradle plugin (5.2.0) to Android build
- Apply app distribution plugin to Android app module
- Update yarn.lock and Podfile.lock with new dependencies

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,6 +20,8 @@ buildscript {
         classpath("com.google.gms:google-services:4.4.0")
         // Firebase Crashlytics Gradle plugin - required to generate build IDs
         classpath("com.google.firebase:firebase-crashlytics-gradle:2.9.9")
+        // Firebase App Distribution Gradle plugin
+        classpath("com.google.firebase:firebase-app-distribution-gradle:5.2.0")
     }
 }
 
