--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,6 +99,8 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            // Use different application ID for debug builds so they can coexist with release builds
+            applicationIdSuffix ".debug"
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
