--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,8 +99,12 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
-            // Use different application ID for debug builds so they can coexist with release builds
-            applicationIdSuffix ".debug"
+            // No applicationIdSuffix: google-services.json only has "com.walkingrpgtemp".
+            // A .debug suffix would use com.walkingrpgtemp.debug, which has no Firebase config,
+            // so Firebase would fail to init and FirebaseService would throw in development.
+            // Trade-off: debug and release cannot be installed side-by-side. To restore
+            // coexistence, add an Android app for com.walkingrpgtemp.debug in Firebase Console,
+            // download an updated google-services.json with both clients, then add the suffix back.
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
