--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
 apply plugin: "com.google.gms.google-services"
 apply plugin: "com.google.firebase.crashlytics"
+apply plugin: "com.google.firebase.appdistribution"
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -98,6 +99,12 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            // No applicationIdSuffix: google-services.json only has "com.walkingrpgtemp".
+            // A .debug suffix would use com.walkingrpgtemp.debug, which has no Firebase config,
+            // so Firebase would fail to init and FirebaseService would throw in development.
+            // Trade-off: debug and release cannot be installed side-by-side. To restore
+            // coexistence, add an Android app for com.walkingrpgtemp.debug in Firebase Console,
+            // download an updated google-services.json with both clients, then add the suffix back.
         }
         release {
             // Caution! In production, you need to generate your own keystore file.
