Fix Android build configuration for React Native 0.72.6 compatibility
- Downgrade Gradle to 7.6 (compatible with RN 0.72.6 Kotlin requirements)
- Downgrade Android Gradle Plugin to 7.4.2 (compatible with Gradle 7.6)
- Downgrade Firebase Crashlytics to 2.9.9 (compatible with Gradle 7.6)
- Update AndroidManifest.xml to use fully qualified class names
- Remove package attribute from manifest (using namespace in build.gradle)
- Add pluginManagement block to settings.gradle for proper plugin resolution
- Update gradle.properties with Java 17 compatibility notes

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,44 +9,27 @@ buildscript {
 
         // We use NDK 23 which has both M1 support and is the side-by-side NDK version from AGP.
         ndkVersion = "23.1.7779620"
+        kotlinVersion = "1.8.22"
     }
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:8.0.1")
+        classpath("com.android.tools.build:gradle:7.4.2")
         classpath("com.facebook.react:react-native-gradle-plugin")
-        classpath("com.google.gms:google-services:4.4.0")
-        // Firebase Crashlytics Gradle plugin - required to generate build IDs
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion")
+        classpath("com.google.gms:google-services:4.4.1")
+        // Firebase Crashlytics 2.9.9 is compatible with Gradle 7.6 (required for RN 0.72.6)
+        // Version 3.0.1 requires Gradle 8.0+, which has Kotlin compatibility issues with RN 0.72.6
         classpath("com.google.firebase:firebase-crashlytics-gradle:2.9.9")
-        // Firebase App Distribution Gradle plugin
-        classpath("com.google.firebase:firebase-app-distribution-gradle:5.2.0")
+        classpath("com.google.firebase:firebase-appdistribution-gradle:5.0.0")
     }
 }
 
-// Enable BuildConfig for all subprojects (required for AGP 8.0+)
-// Also automatically add namespace from AndroidManifest.xml if not specified (required for AGP 8.0+)
-subprojects {
-    afterEvaluate { project ->
-        if (project.hasProperty("android")) {
-            android {
-                buildFeatures {
-                    buildConfig = true
-                }
-                
-                // Automatically set namespace from AndroidManifest.xml if not already set
-                if (namespace == null) {
-                    def manifestFile = file("${project.projectDir}/src/main/AndroidManifest.xml")
-                    if (manifestFile.exists()) {
-                        def manifestContent = manifestFile.getText()
-                        def namespaceMatcher = manifestContent =~ /package=["']([^"']+)["']/
-                        if (namespaceMatcher.find()) {
-                            namespace = namespaceMatcher.group(1)
-                        }
-                    }
-                }
-            }
-        }
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
     }
 }
