--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,51 +1,23 @@
 # Project-wide Gradle settings.
 
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
-# Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
 org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
 
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
-
-# AndroidX package structure to make it clearer which packages are bundled with the
-# Android operating system, and which are packaged with your app's APK
-# https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
 
-# Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.182.0
-
-# Use this property to specify which architecture you want to build.
-# You can also override it from the CLI using
-# ./gradlew <task> -PreactNativeArchitectures=x86_64
 reactNativeArchitectures=armeabi-v7a,arm64-v8a,x86,x86_64
-
-# Use this property to enable support to the new architecture.
-# This will allow you to use TurboModules and the Fabric render in
-# your application. You should enable this flag either if you want
-# to write custom TurboModules/Fabric components OR use libraries that
-# are providing them.
 newArchEnabled=false
-
-# Use this property to enable or disable the Hermes JS engine.
-# If set to false, you will be using JSC instead.
 hermesEnabled=true
 
-# Java 17 is required for React Native 0.72.6 and AGP 8.0.1
+# Java 17 is REQUIRED for React Native 0.72.6 + Gradle 8.3 + AGP 8.0.1
+# Gradle 8.3 does not support Java 21 (max is Java 20)
 # Configure Java 17 using one of these methods:
-# 1. Set JAVA_HOME environment variable (recommended)
-# 2. Add org.gradle.java.home=<path> to ~/.gradle/gradle.properties (user-level)
-# 3. Add org.gradle.java.home=<path> below (project-level, not recommended for version control)
-# org.gradle.java.home=/path/to/java17
+# 1. Set JAVA_HOME environment variable to Java 17 (recommended)
+#    export JAVA_HOME=/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
+# 2. Set org.gradle.java.home below to your Java 17 installation path
+#    Uncomment and set the path below:
+# org.gradle.java.home=/Library/Java/JavaVirtualMachines/jdk-17.jdk/Contents/Home
+# 3. In Android Studio: File > Settings > Build > Build Tools > Gradle > Gradle JDK > Select Java 17
+
+kotlinVersion=1.8.22
